image link update

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <meta property="og:title" content="Based Bodega" />
     <meta
       property="og:image"
-      content="https://callmedas69.github.io/frame/rabbywallet.png?height=672&width=1344"
+      content="https://callmedas69.github.io/frame_basedbodega/welcome.gif?height=672&width=1344"
     />
     <meta property="fc:frame" content="vNext" />
     <meta
       property="fc:frame:image"
-      content="https://callmedas69.github.io/frame/rabbywallet.png?height=672&width=1344"
+      content="https://callmedas69.github.io/frame_basedbodega/welcome.gif?height=672&width=1344"
     />
 
     <meta property="fc:frame:button:1" content="STAKE" />
