update link button

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta property="fc:frame:button:1:action" content="link" />
     <meta
       property="fc:frame:button:1:target"
-      content="https://rabby.io/rabby-points?code=VQ1PM63Y"
+      content="https://basedbodega.xyz/"
     />
 
     <script src="https://cdn.tailwindcss.com"></script>
